fixed header alignment

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,14 +4,8 @@ header {
   background-image: url("https://www.transparenttextures.com/patterns/always-grey.png");
   height: 400px;
   padding: 1em;
-  width: 100%;
+  top: 120px;
+  width: 100vw;
   text-align: center;
-  position: relative;
-  z-index: auto;
- }
- .nav {
   position: absolute;
  }
-
- #title {font-family: 'Bungee', cursive;};
- #newtweet {font-family: 'Source Sans Pro', sans-serif;};
